Reorganize build.gradle